# rust-tide-sqlx-realworld-example-app

./: .gitignore  Cargo.toml  Conduit.postman_collection.json  readme.md  sqlx-data.json
api/: .gitignore  Cargo.toml
api/conduit/: Cargo.toml
api/conduit/src/: article.rs  config.rs  error.rs  jwt.rs  lib.rs  profile.rs  user.rs
api/conduit/src/queries/: update_user.sql
api/gql/: Cargo.toml
api/gql/src/: context.rs  lib.rs  mutation.rs  query.rs  user.rs
api/migrations/2020-08-30-084758_create_articles_tags_table/: down.sql  up.sql
api/rest/: Cargo.toml
api/rest/src/: article.rs  comment.rs  lib.rs  profile.rs  state.rs  tag.rs  user.rs
api/rest_api/: Cargo.toml
api/rest_api/src/: article.rs  auth_middleware.rs  comment.rs  filters.rs  lib.rs  profile.rs  tag.rs  user.rs
api/rest_api/src/filters/: auth.rs  state.rs
api/server/: Cargo.toml
api/server/src/: auth.rs  jwt.rs  lib.rs  state.rs
api/src/: api.rs  config.rs  jwt.rs  main.rs  services.rs
api/src/api/: comment.rs  tag.rs  user.rs
api/src/queries/: create_comment.sql  follow_profile.sql  get_profile.sql  get_user_by_email.sql  update_article.sql
api/src/services/: profile.rs  user.rs
conduit/: Cargo.toml
conduit/src/: article.rs  comment.rs  error.rs  lib.rs  query.rs  tag.rs  user.rs
conduit/src/queries/: create_article.sql  create_user.sql  delete_article.sql  delete_comment.sql
gql/: Cargo.toml
gql/src/: article.rs  comment.rs  context.rs  error.rs  lib.rs  mutation.rs  profile.rs  query.rs  tag.rs  user.rs
migrations/2020-08-30-084622_create_articles_table/: down.sql
migrations/2020-08-30-084811_create_articles_favorites_table/: down.sql  up.sql
rest/: Cargo.toml
rest/src/: article.rs  comment.rs  error.rs  lib.rs  profile.rs  tag.rs  user.rs
rwa_api/: .env  Cargo.toml  docker-compose.yml  schema.sql  sqlx-data.json
rwa_api/migrations/2020-08-30-084231_create_users_table/: up.sql
rwa_api/migrations/2020-08-30-084622_create_articles_table/: up.sql
rwa_api/migrations/2020-08-30-084632_create_comments_table/: up.sql
rwa_api/migrations/2020-08-30-084637_create_tags_table/: up.sql
rwa_api/migrations/2020-08-30-084820_create_users_followers_table/: down.sql  up.sql
rwa_api/src/: api.rs  jwt.rs  main.rs  server.rs  services.rs
rwa_api/src/api/: article.rs  auth_middleware.rs  comment.rs  create_article.rs  create_comment.rs  delete_article.rs  delete_comment.rs  favorite_article.rs  feed.rs  follow_profile.rs  get_article.rs  get_articles.rs  get_comments.rs  get_profile.rs  get_tags.rs  get_user.rs  login.rs  mod.rs  profile.rs  register.rs  tag.rs  unfavorite_article.rs  unfollow_profile.rs  update_article.rs  update_user.rs  user.rs
rwa_api/src/db/: article.rs  comment.rs  mod.rs  tag.rs  user.rs
rwa_api/src/queries/: favorite_article.sql  get_articles.sql  get_comments.sql  get_tags.sql  unfavorite_article.sql  unfollow_profile.sql
rwa_api/src/services/: article.rs  comment.rs  mod.rs  profile.rs  tag.rs  user.rs
server/: Cargo.toml
server/src/: auth.rs  error.rs  lib.rs  state.rs
src/: config.rs  error.rs  main.rs
web/: Cargo.toml  prettier.config.js  tailwind.config.js
web/src/: article.rs  error.rs  filters.rs  lib.rs  render.rs  user.rs
web/static/: article.js  editor.js  login.js  main.js  register.js  settings.js
web/templates/: _article_meta.html  article.html  editor.html  home.html  layout.html  login.html  register.html  settings.html
