[package]
name = "rwa_api"
version = "0.1.0"
authors = ["Mykola Basov <git@mbasov.com>"]
edition = "2018"

[workspace]
members = [
  "conduit",
  "rest",
  "gql",
  "server"
]

[dependencies]
conduit = { path = "./conduit" }
rest = { path = "./rest" }
gql = { path = "./gql" }
server = { path = "./server" }

tokio = { version = "0.2", features = ["full"] }
dotenv = "0.15"
thiserror = "1.0"
tracing-subscriber = { version = "0.2" } 
