[package]
name = "rwa_api"
version = "0.1.0"
authors = ["Mykola Basov <git@mbasov.com>"]
edition = "2018"

[workspace]
members = [
  "conduit",
  "rest",
  "gql"
]

[dependencies]
tokio = { version = "0.2.22", features = ["full"] }
anyhow = "1.0.32"
listenfd = "0.3.3"
conduit = { path = "./conduit" }
rest = { path = "./rest" }
gql = { path = "./gql" }
juniper_warp = { git = "https://github.com/graphql-rust/juniper", branch = "master" }
