[package]
name = "rwa_api"
version = "0.1.0"
authors = ["Mykola Basov <git@mbasov.com>"]
edition = "2018"

[workspace]
members = [
  "conduit",
  "rest",
  "gql",
  "server"
]

[dependencies]
tokio = { version = "0.2.22", features = ["full"] }
anyhow = "1.0"
conduit = { path = "./conduit" }
rest = { path = "./rest" }
gql = { path = "./gql" }
server = { path = "./server" }
