[package]
name = "conduit"
version = "0.1.0"
authors = ["Mykola Basov <git@mbasov.com>"]
edition = "2018"

[dependencies]
sqlx = { version = "0.4.0-beta.1", default-features = false, features = ["macros", "postgres", "chrono", "offline", "runtime-tokio"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.8"
slug = "0.1"
thiserror = "1.0"
validator = { version = "0.11", features = ["derive"] }
