[package]
name = "gql"
version = "0.1.0"
authors = ["Mykola Basov <git@mbasov.com>"]
edition = "2018"

[dependencies]
conduit = { path = "../conduit" }
server = { path = "../server" }

juniper = { git = "https://github.com/graphql-rust/juniper", branch = "master" }
juniper_warp = { git = "https://github.com/graphql-rust/juniper", branch = "master" }
thiserror = "1.0"
