[package]
name = "rwa_api"
version = "0.1.0"
authors = ["Mykola Basov <git@mbasov.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6", features = ["attributes"] }
sqlx = { version = "0.4.0-beta.1", features = ["postgres", "chrono", "uuid", "offline"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tide = "0.13"
dotenv = "0.15"
slug = "0.1"
chrono = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"]  }
bcrypt = "0.8.2"
hmac = "0.9.0"
sha2 = "0.9.1"
jsonwebtoken = "7.2.0"
thiserror = "1.0.20"
