[package]
name = "conduit"
version = "0.1.0"
authors = ["Mykola Basov <git@mbasov.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.4.0-beta.1", features = ["postgres", "chrono", "offline"] }
anyhow = "1.0"
bcrypt = "0.8"
slug = "0.1"
jsonwebtoken = "7.2"
