[package]
name = "rest"
version = "0.1.0"
authors = ["Mykola Basov <git@mbasov.com>"]
edition = "2018"

[dependencies]
conduit = { path = "../conduit" }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
warp = { version = "0.2", features = ["tls", "compression"] }
dotenv = "0.15"
hyper = "0.13"
