[package]
name = "rest_api"
version = "0.1.0"
authors = ["Mykola Basov <git@mbasov.com>"]
edition = "2018"

[dependencies]
conduit = { path = "../conduit" }
tide = "0.13"
tide-compress = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
dotenv = "0.15"
anyhow = "1.0"
