[package]
name = "server"
version = "0.1.0"
authors = ["Mykola Basov <git@mbasov.com>"]
edition = "2018"

[dependencies]
conduit = { path = "../conduit" }
tokio = { version = "0.2", default-features = false, features = ["sync"] }
warp = { version = "0.2", features = ["tls", "compression"] }
hyper = "0.13"
listenfd = "0.3"
anyhow = "1.0"
